封装custom_errors模块，用用于处理来自internal目录下的错误
